# Dex_Hand_MSR

./: .gitattributes  .gitignore  PROJECT_PROPOSAL.md  README.md  useful_commands.md
cad_asset/: dex_hand_MSR.STEP
script/ESP32_multi_servo_control/: ESP32_multi_servo_control.ino
script/ESP32_multi_servo_with_linear/: ESP32_multi_servo_with_linear.ino
script/ESP32_multi_servo_with_linear_feather/: ESP32_multi_servo_with_linear_feather.ino
script/ESP32_servo_control/: ESP32_servo_control.ino
script/ESP32_speed_control/: ESP32_speed_control.ino
src/hand_mediapipe/: package.xml  setup.cfg  setup.py
src/hand_mediapipe/hand_mediapipe/: hand_angle_node.py  hand_joint_gui_node.py
src/hand_mediapipe/launch/: vision_mediapipe.launch.xml
src/hand_motion_shadowing/: package.xml  setup.cfg  setup.py
src/hand_motion_shadowing/config/: v1mp.yaml  v1quest.yaml  v2mp.yaml  v2quest.yaml
src/hand_motion_shadowing/hand_motion_shadowing/: hand_shadowing_node.py
src/hand_motion_shadowing/launch/: shadowing.launch.xml
src/hand_servo_control/: package.xml  setup.cfg  setup.py
src/hand_servo_control/hand_servo_control/: demo_motion_node.py  servo_control_node.py  single_servo_control.py
src/hand_servo_control/launch/: demo.launch.xml  multi_servo.launch.xml
src/hand_servo_interfaces/: CMakeLists.txt  package.xml
src/hand_servo_interfaces/srv/: ServoCommands.srv  SetServo.srv
src/hand_vision/: package.xml  setup.cfg  setup.py
src/hand_vision/hand_vision/: hand_angle_node.py  hand_angle_quest.py  hand_joint_gui_node.py
(+1 files in other folders)
